--- a/package.json
+++ b/package.json
@@ -36,7 +36,11 @@
     "prettier-plugin-packagejson": "^2.3.0",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4", 
+    "framer-motion": "6.0.0",
+    "react-scroll": "^1.8.1",
+    "react-slick": "^0.27.13",
+    "slick-carousel": "^1.8.1"
   },
   "engines": {
     "node": ">=16"
